--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+  box-sizing: border-box;
+  font-size: 30px;
+  font-weight: 400;
   }
-}
-
-.App-header {
-  background-color: #282c34;
+ul {
+  list-style: none;
+  min-width: 70%;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 0;
+  }
+.container {
   min-height: 100vh;
+  text-align: center;
+  background-color: #8a44c4;
+  }
+.logo {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  margin-left: 10%;
+  font-style: italic;
   }
-  to {
-    transform: rotate(360deg);
+.todoList {
+  background-color: #4b095f;
+  display: flex;
+  max-width: 60%;
+  margin: auto;
+  flex-direction: column;
   }
-}
+.todo{
+  background-color: #8b3dca;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  min-width: 80%;
+  padding-left: 5px;
+  }
+.addTodo_title {
+  font-size: 50px;
+  color: #FFFFFF;
+  }
+.addTodo_input {
+  width: 60%;
+  font-family: inherit;
+  }
+.todo_button {
+  border: 0px;
+  cursor: pointer;
+  margin-right: 10px;
+  }
+.editTodo {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  }
+input {
+  width: 100%;
+  color: #FFFFFF;
+  background-color: #4b095f;
+  border: 1px solid #be6fff;
+  padding-left: 5px;
+  }
+button {
+  background-color: #be6fff;
+  border: 0px;
+  cursor: pointer;
+  font-family: inherit;
+  border: 1px solid #be6fff;
+  color: #ffffff;
+  }
+button:hover{
+  background: rgba(0,0,0,0);
+	color: #ffffff;
+  }
+.todo_buttons {
+  display: flex;
+  align-items:center;
+  }
